--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -1,3 +1,7 @@
+<label>Server name</label>
+<!-- <input type="text" class="form-control" (input)="onUpdateServerName($event)" /> -->
+<input type="text" class="form-control" [(ngModel)]="serverName" />
+
 <button
   class="btn btn-primary"
   [disabled]="!allowNewServer"
@@ -6,6 +10,7 @@
   Add Server
 </button>
 <p>{{ serverCreationStatus }}</p>
+<p>{{ serverName }}</p>
 <!-- <p>{{ allowNewServer }}</p>
 <p [innerText]="allowNewServer"></p> -->
 <app-server></app-server>
