--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -9,12 +9,21 @@
 >
   Add Server
 </button>
-<p>{{ serverCreationStatus }}</p>
-<p>{{ serverName }}</p>
+<!-- <p>{{ serverCreationStatus }}</p> -->
+<!-- <p>{{ serverName }}</p> -->
 <!-- <p>{{ allowNewServer }}</p>
 <p [innerText]="allowNewServer"></p> -->
-<app-server></app-server>
-<hr />
+<p *ngIf="serverCreated; else noServer">
+  Server was created, server name is {{ serverName }}
+</p>
+<ng-template #noServer>
+  <p>
+    No server was created!
+  </p>
+</ng-template>
+<app-server *ngFor="let server of servers"></app-server>
+
+<!-- <hr />
 <label>Username</label>
 <input type="text" class="form-control" [(ngModel)]="username" />
 <p>{{ username }}</p>
@@ -24,6 +33,6 @@
   (click)="ResetUser()"
 >
   Reset User
-</button>
+</button> -->
 
 <!-- or use (click)="username=''" -->
