--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -22,6 +22,18 @@
   </p>
 </ng-template>
 <app-server *ngFor="let server of servers"></app-server>
+<hr />
+<button class="btn btn-primary" (click)="displayHiddenParagraph()">
+  Display details
+</button>
+<p>{{ counter() }}</p>
+<p
+  *ngFor="let text of arrayText; let i = index"
+  [ngStyle]="{ backgroundColor: getColor() }"
+  [ngClass]="{ over5: i >= 4 }"
+>
+  {{ hiddenText }}
+</p>
 
 <!-- <hr />
 <label>Username</label>
